--- a/nav/Base.lproj/Main.storyboard
+++ b/nav/Base.lproj/Main.storyboard
@@ -330,7 +330,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="jgX-bk-lYr"/>
+        <segue reference="J5Y-2h-9jk"/>
         <segue reference="XQT-1z-UDS"/>
     </inferredMetricsTieBreakers>
 </document>
